--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Gilesbradshaw.GitHub.io : ok">
+    <meta name="description" content="Giles Bradshaw : Application Developer">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Gilesbradshaw.GitHub.io</title>
+    <title>Giles Bradshaw</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gilesbradshaw">View on GitHub</a>
 
-          <h1 id="project_title">Gilesbradshaw.GitHub.io</h1>
-          <h2 id="project_tagline">ok</h2>
+          <h1 id="project_title">Giles Bradshaw</h1>
+          <h2 id="project_tagline">Application Developer</h2>
 
         </header>
     </div>
@@ -28,36 +28,26 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>I have 25 years experience developing software solutions for manufacturing companies.  I am experienced with a wide range of technologies including PLC (programmable logic controllers), Scada and Batch systems, RDMS systems, .NET programming and the Web.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="past-projects" class="anchor" href="#past-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Past projects</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>PC based control system for winding and slitting polyester film</li>
+<li>Several Scada &amp; Batch Management systems for pharmaceutical granule production also including PLC software</li>
+<li>Engine and gear box assembly line control and monitoring systems</li>
+<li>Scada, Batch Management and PLC control system for ketchup and brown sauce manufacture</li>
+<li>Web based production scheduling software for chewing gum manufacture</li>
+<li>Control system for a highly automated lubrication oil blending and bottling factory.</li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="current-projects" class="anchor" href="#current-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current projects</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>I have just completed a web based Scada and batch management system for pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable graphics and charts.  The server pushes data to the client using web sockets.</p>
       </section>
     </div>
 
