--- a/index.html
+++ b/index.html
@@ -42,12 +42,41 @@
 <li>Scada, Batch Management and PLC control system for ketchup and brown sauce manufacture</li>
 <li>Web based production scheduling software for chewing gum manufacture</li>
 <li>Control system for a highly automated lubrication oil blending and bottling factory.</li>
+<li>Silverlight, RIA Services and SQL Server Recipe Management system for three large European breweries.</li>
 </ul>
 
 <h3>
 <a id="current-projects" class="anchor" href="#current-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current projects</h3>
 
 <p>I have just completed a web based Scada and batch management system for pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable graphics and charts.  The server pushes data to the client using web sockets.</p>
+
+<p>I am interested in applying web technology to manufacturing systems using push based technology and reactive programming to make web browsers live.</p>
+
+<h3>
+<a id="current-skills" class="anchor" href="#current-skills" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current skills</h3>
+
+<ul>
+<li>C#</li>
+<li>VB.NET</li>
+<li>JavaScript</li>
+<li>CoffeeScript</li>
+<li>Silverlight</li>
+<li>ASP.NET MVC</li>
+<li>Web Apis</li>
+<li>SignalR</li>
+<li>LINQ both for C# and Js</li>
+<li>Reactive Programming using Reactive Extensions for C# and Js</li>
+<li>SQL Server</li>
+<li>Knockout Js</li>
+<li>JQuery</li>
+<li>Bootstrap</li>
+<li>MVVM</li>
+</ul>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+
+<p>giles.bradshaw @ sigyl.com</p>
       </section>
     </div>
 
