Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 </ul>
 
 <h3>
+<a id="location" class="anchor" href="#location" aria-hidden="true"><span class="octicon octicon-link"></span></a>Location</h3>
+
+<p>North Devon, UK</p>
+
+<h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
 <p>giles.bradshaw @ sigyl.com</p>
