--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <h3>
 <a id="current-projects" class="anchor" href="#current-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current projects</h3>
 
-<p>I have just completed a web based Scada and batch management system for pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable graphics and charts.  The server pushes data to the client using web sockets.</p>
+<p>I have just completed a web based Scada and batch management system for pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable SVG graphics and charts - using flot.  The server pushes data to the client using web sockets.</p>
 
 <p>I have combined knockout js and RxJs to allow me to bind the DOM to an OData web api using a linq like syntax and then to keep the fetched data in sync with the state on the server by subscribing to push notifications using web sockets.</p>
 
@@ -67,6 +67,7 @@
 <li>Web Apis</li>
 <li>SignalR</li>
 <li>Breeze</li>
+<li>Flot</li>
 <li>LINQ both for C# and Js</li>
 <li>Reactive Programming using Reactive Extensions for C# and Js</li>
 <li>SQL Server</li>
