Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <h3>
 <a id="current-projects" class="anchor" href="#current-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current projects</h3>
 
-<p>I have just completed a web based Scada and batch management system for pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable SVG graphics and charts - using flot.  The server pushes data to the client using web sockets.</p>
+<p>I have just completed a web based Scada and Batch management system for a pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable SVG graphics and charts - using flot.  The server pushes data to the client using web sockets.</p>
 
 <p>I have combined knockout js and RxJs to allow me to bind the DOM to an OData web api using a linq like syntax and then to keep the fetched data in sync with the state on the server by subscribing to push notifications using web sockets.</p>
 
