Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 <a id="past-projects" class="anchor" href="#past-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Past projects</h3>
 
 <ul>
-<li>PC based control system for winding and slitting polyester film</li>
-<li>Several Scada &amp; Batch Management systems for pharmaceutical granule production also including PLC software</li>
-<li>Engine and gear box assembly line control and monitoring systems</li>
-<li>Scada, Batch Management and PLC control system for ketchup and brown sauce manufacture</li>
-<li>Web based production scheduling software for chewing gum manufacture</li>
+<li>PC based control system for winding and slitting polyester film.</li>
+<li>Several Scada &amp; Batch Management systems for pharmaceutical granule production also including PLC software.</li>
+<li>Engine and gear box assembly line control and monitoring systems.</li>
+<li>Scada, Batch Management and PLC control system for ketchup and brown sauce manufacture.</li>
+<li>Web based production scheduling software for chewing gum manufacture.</li>
 <li>Control system for a highly automated lubrication oil blending and bottling factory.</li>
 <li>Silverlight, RIA Services and SQL Server Recipe Management system for three large European breweries.</li>
+<li>A web application converting TCP/IP messages (using TCP/IP sockets) to OPC communications with PLCs for a large UK automotive manufacturer.</li>
+<li>A live single page web application providing management functions over a large materials handling system for a major UK pharmaceutical company.</li>
 </ul>
 
 <h3>
