Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <ul>
 <li>PC based control system for winding and slitting polyester film.</li>
+<li>Management Information System for photographic film slitters and T Machines.</li>
+<li>Route scheduling and arbitration system for a bitumen emulsion plant.</li>
 <li>Several Scada &amp; Batch Management systems for pharmaceutical granule production also including PLC software.</li>
 <li>Engine and gear box assembly line control and monitoring systems.</li>
 <li>Scada, Batch Management and PLC control system for ketchup and brown sauce manufacture.</li>
