Added scada page

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,107 @@
-hey!
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Giles Bradshaw : Application Developer">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Giles Bradshaw</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/gilesbradshaw">View on GitHub</a>
+
+          <h1 id="project_title">Giles Bradshaw</h1>
+          <h2 id="project_tagline">Application Developer</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
+
+<p>I have 25 years experience developing software solutions for manufacturing companies.  I am experienced with a wide range of technologies including PLC (programmable logic controllers), Scada and Batch systems, RDMS systems, .NET programming and the Web.</p>
+
+<h3>
+<a id="past-projects" class="anchor" href="#past-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Past projects</h3>
+
+<ul>
+<li>PC based control system for winding and slitting polyester film.</li>
+<li>Management Information System for photographic film slitters and T Machines.</li>
+<li>Route scheduling and arbitration system for a bitumen emulsion plant.</li>
+<li>Several Scada &amp; Batch Management systems for pharmaceutical granule production also including PLC software.</li>
+<li>Engine and gear box assembly line control and monitoring systems.</li>
+<li>Scada, Batch Management and PLC control system for ketchup and brown sauce manufacture.</li>
+<li>Web based production scheduling software for chewing gum manufacture.</li>
+<li>Control system for a highly automated lubrication oil blending and bottling factory.</li>
+<li>Silverlight, RIA Services and SQL Server Recipe Management system for three large European breweries.</li>
+<li>A web application converting TCP/IP messages (using TCP/IP sockets) to OPC communications with PLCs for a large UK automotive manufacturer.</li>
+<li>A live single page web application providing management functions over a large materials handling system for a major UK pharmaceutical company.</li>
+</ul>
+
+<h3>
+<a id="current-projects" class="anchor" href="#current-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current projects</h3>
+
+<p>I have just completed a web based Scada and Batch management system for a pharmaceutical granule manufacture.  The server is written in c# and the client is a Single page application displaying live and historic data including configurable SVG graphics and charts - using flot.  The server pushes data to the client using web sockets.</p>
+
+<p>I have combined knockout js and RxJs to allow me to bind the DOM to an OData web api using a linq like syntax and then to keep the fetched data in sync with the state on the server by subscribing to push notifications using web sockets.</p>
+
+<p>I am interested in applying web technology to manufacturing systems using push based technology and reactive programming to make web browsers live.</p>
+
+<h3>
+<a id="current-skills" class="anchor" href="#current-skills" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current skills</h3>
+
+<ul>
+<li>C#</li>
+<li>VB.NET</li>
+<li>JavaScript</li>
+<li>CoffeeScript</li>
+<li>Silverlight</li>
+<li>ASP.NET MVC</li>
+<li>Web Apis</li>
+<li>SignalR</li>
+<li>Breeze</li>
+<li>Flot</li>
+<li>LINQ both for C# and Js</li>
+<li>Reactive Programming using Reactive Extensions for C# and Js</li>
+<li>SQL Server</li>
+<li>Knockout Js</li>
+<li>JQuery</li>
+<li>Bootstrap</li>
+<li>MVVM</li>
+<li>Q</li>
+</ul>
+
+<h3>
+<a id="location" class="anchor" href="#location" aria-hidden="true"><span class="octicon octicon-link"></span></a>Location</h3>
+
+<p>North Devon, UK</p>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+
+<p>giles.bradshaw @ sigyl.com</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
