--- a/scada.html
+++ b/scada.html
@@ -81,7 +81,7 @@
 			  The home page shows the basic system hierarchy - Enterpises - Sites - Zones.   Clicking on a zone takes you to the runtime view of a zone.
 			  You can always get back to the home page by clicking the home icon.
 		  </p>
-	  	<img src="/images/scada/home.png" />
+	  	<img src="/images/home.png" />
 		  <h4>
 			  Runtime zone
 		  </h4>
@@ -92,18 +92,18 @@
 	  		Navigation
 	  	</h4>
 		<p>The breadcrumb gives access to all ancestors of the currently viewed entity</p>
-	  	<img src="/images/scada/breadcrumb.png" />
+	  	<img src="/images/breadcrumb.png" />
 		<p>The arrow widget opens and closes a menu for the viewed entity</p>
-	  	<img src="/images/scada/arrow.png" />
+	  	<img src="/images/arrow.png" />
 		  <p>The menu gives you access to...</p>
 		  <ul>
-			<li>Commands <img src="/images/scada/commands.png" /></li>
-	  		<li>Administrative views and functions <img src="/images/scada/admin.png" /></li>
-	  		<li>User views and functions <img src="/images/scada/user.png" /></li>
-	  		<li>Related entities in the model <img src="/images/scada/related.png" /></li>
+			<li>Commands <img src="/images/commands.png" /></li>
+	  		<li>Administrative views and functions <img src="/images/admin.png" /></li>
+	  		<li>User views and functions <img src="/images/user.png" /></li>
+	  		<li>Related entities in the model <img src="/images/related.png" /></li>
 		  </ul>
 		  <p>Entities have a combination of configuration, runtime and history.  You can switch between these</p>
-	  		<img src="/images/scada/related.png" />
+	  		<img src="/images/related.png" />
 		  <p>For example from the runtime zone view you can view all the current batches for a zone, from the history zone view you can view all the batches that have ever run for a zone.</p>
       </section>
     </div>
