Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
 <li>Bootstrap</li>
 <li>MVVM</li>
 <li>Q</li>
+<li>QUnit</li>
+<li>Sinon</li>
+</ul>
+
+<h4>
+<a id="limited-experience-in" class="anchor" href="#limited-experience-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>Limited experience in..</h4>
+
+<ul>
+<li>Node</li>
+<li>Angular</li>
+<li>Underscore</li>
 </ul>
 
 <h3>
